// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doGetRecommendedSet() action creator should create the correct actions for when the get product recommended set procedure is successful without receiving options: Get product recommended set success payload without receiving options 1`] = `
Object {
  "payload": Object {
    "entities": Object {
      "facets": Object {
        "categories_136103": Object {
          "description": "A-Line Skirts",
          "groupType": 6,
          "id": "categories_136103",
          "parentId": "categories_undefined",
          "slug": "skirts-a-line-skirts",
          "url": "woman/skirts-a-line-skirts",
          "value": 136103,
        },
      },
      "products": Object {
        "12913172": Object {
          "DEPRECATED_images": Object {
            "contextual": Object {},
            "details": Array [],
            "primary": Object {
              "sources": Object {
                "54": "https://cdn-images.farfetch.com/12/91/31/72/12913172_13206150_54.jpg",
              },
              "type": "image",
            },
            "secondary": undefined,
          },
          "colorGrouping": undefined,
          "customAttributes": undefined,
          "groupedEntries": undefined,
          "grouping": undefined,
          "groupingProperties": undefined,
          "id": 12913172,
          "images": Array [
            Object {
              "order": 1,
              "size": "54",
              "sources": Object {
                "54": "https://cdn-images.farfetch.com/12/91/31/72/12913172_13206150_54.jpg",
              },
              "url": "https://cdn-images.farfetch.com/12/91/31/72/12913172_13206150_54.jpg",
            },
          ],
          "merchant": undefined,
          "price": Object {
            "includingTaxes": 129.7446,
            "isFormatted": true,
          },
          "prices": undefined,
          "quantity": 7,
          "shortDescription": "Chuck 70 U-Throat Ballet sneakers",
          "sizes": undefined,
          "slug": "chuck-70-u-throat-ballet-sneakers-12913172",
          "tag": Object {
            "id": undefined,
            "name": undefined,
          },
          "variants": undefined,
        },
      },
      "recommendedSets": Object {
        "1050": Object {
          "facetGroups": Array [
            Object {
              "deep": 3,
              "description": "Categories",
              "key": "categories",
              "type": 6,
              "values": Array [
                Array [
                  "categories_136103",
                ],
              ],
            },
          ],
          "gender": 0,
          "genderName": "foo-bar",
          "id": 1050,
          "name": "cool set",
          "productImgQueryParam": undefined,
          "products": Object {
            "entries": Array [
              12913172,
            ],
            "number": 1,
            "totalItems": 40,
            "totalPages": 2,
          },
        },
      },
    },
    "recommendedSetId": 1050,
    "result": 1050,
  },
  "type": "@farfetch/blackout-core/GET_RECOMMENDED_SET_SUCCESS",
}
`;

exports[`doGetRecommendedSet() action creator should create the correct actions for when the get product recommended set procedure is successful: Get product recommended set success payload 1`] = `
Object {
  "payload": Object {
    "entities": Object {
      "facets": Object {
        "categories_136103": Object {
          "description": "A-Line Skirts",
          "groupType": 6,
          "id": "categories_136103",
          "parentId": "categories_undefined",
          "slug": "skirts-a-line-skirts",
          "url": "woman/skirts-a-line-skirts",
          "value": 136103,
        },
      },
      "products": Object {
        "12913172": Object {
          "DEPRECATED_images": Object {
            "contextual": Object {},
            "details": Array [],
            "primary": Object {
              "sources": Object {
                "54": "https://cdn-images.farfetch.com/12/91/31/72/12913172_13206150_54.jpg",
              },
              "type": "image",
            },
            "secondary": undefined,
          },
          "colorGrouping": undefined,
          "customAttributes": undefined,
          "groupedEntries": undefined,
          "grouping": undefined,
          "groupingProperties": undefined,
          "id": 12913172,
          "images": Array [
            Object {
              "order": 1,
              "size": "54",
              "sources": Object {
                "54": "https://cdn-images.farfetch.com/12/91/31/72/12913172_13206150_54.jpg",
              },
              "url": "https://cdn-images.farfetch.com/12/91/31/72/12913172_13206150_54.jpg",
            },
          ],
          "merchant": undefined,
          "price": Object {
            "includingTaxes": 129.7446,
            "isFormatted": true,
          },
          "prices": undefined,
          "quantity": 7,
          "shortDescription": "Chuck 70 U-Throat Ballet sneakers",
          "sizes": undefined,
          "slug": "chuck-70-u-throat-ballet-sneakers-12913172",
          "tag": Object {
            "id": undefined,
            "name": undefined,
          },
          "variants": undefined,
        },
      },
      "recommendedSets": Object {
        "1050": Object {
          "facetGroups": Array [
            Object {
              "deep": 3,
              "description": "Categories",
              "key": "categories",
              "type": 6,
              "values": Array [
                Array [
                  "categories_136103",
                ],
              ],
            },
          ],
          "gender": 0,
          "genderName": "foo-bar",
          "id": 1050,
          "name": "cool set",
          "productImgQueryParam": "?c=2",
          "products": Object {
            "entries": Array [
              12913172,
            ],
            "number": 1,
            "totalItems": 40,
            "totalPages": 2,
          },
        },
      },
    },
    "recommendedSetId": 1050,
    "result": 1050,
  },
  "type": "@farfetch/blackout-core/GET_RECOMMENDED_SET_SUCCESS",
}
`;
